atualização do exercício 022
Aprendi o atalho para background e a observação do background-size

--- a/HTML-CSS-3-5/ex022/fundo006.html
+++ b/HTML-CSS-3-5/ex022/fundo006.html
@@ -7,16 +7,19 @@
     <title>Document</title>
     <style>
         body{
-            height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 500px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,6 +30,8 @@
 <body>
     <main>
         <h1>Teste de Imagem de fundo </h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi incidunt mollitia exercitationem sequi fugit tenetur illum molestiae ipsam possimus, consequuntur amet est error sed, deserunt eaque quidem iure eum. Animi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab autem consequuntur porro fugit magni eos iusto quasi, non, similique alias labore doloribus qui quas perferendis, sapiente vero quis maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae natus vero quo eligendi, excepturi sapiente asperiores, explicabo quibusdam ad, exercitationem sit recusandae architecto sunt quaerat reiciendis autem expedita dicta?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi incidunt mollitia exercitationem sequi fugit tenetur illum molestiae ipsam possimus, consequuntur amet est error sed, deserunt eaque quidem iure eum. Animi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab autem consequuntur porro fugit magni eos iusto quasi, non, similique alias labore doloribus qui quas perferendis, sapiente vero quis maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae natus vero quo eligendi, excepturi sapiente asperiores, explicabo quibusdam ad, exercitationem sit recusandae architecto sunt quaerat reiciendis autem expedita dicta?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi incidunt mollitia exercitationem sequi fugit tenetur illum molestiae ipsam possimus, consequuntur amet est error sed, deserunt eaque quidem iure eum. Animi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab autem consequuntur porro fugit magni eos iusto quasi, non, similique alias labore doloribus qui quas perferendis, sapiente vero quis maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum repudiandae natus vero quo eligendi, excepturi sapiente asperiores, explicabo quibusdam ad, exercitationem sit recusandae architecto sunt quaerat reiciendis autem expedita dicta?</p>
     </main>
     
