--- a/HTML-CSS-3-5/d012/index.html
+++ b/HTML-CSS-3-5/d012/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="normal">
             <p>
                 Estou ficando cansado <br>
                 Da tal tecnologia <br>
@@ -25,7 +25,7 @@
                 Vou dizer tudo em poesia.
             </p>
         </section>
-        <section>
+        <section class="imagem">
             <p>
                 Não é mais como era antes <br>
                 É tudo abreviado <br>
@@ -36,7 +36,7 @@
                 E um coração desenhado.
             </p>
         </section>
-        <section>
+        <section class="normal">
             <p>
                 Arroba agora não pesa <br>
                 É parte de um endereço <br>
@@ -56,7 +56,7 @@
                 Decifre esse rabisco.
             </p>
         </section>
-        <section>
+        <section class="imagem">
             <p>
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
@@ -67,7 +67,7 @@
                 Nas linhas do coração.
             </p>
         </section>
-        <section>
+        <section class="normal">
             <p>
                 Agora, escrevo e envio <br>
                 Chegando na mesma hora <br>
@@ -89,6 +89,6 @@
         </section>
     </main>
     
-    <footer>Site criado por Rodrigo Ramone para o CursoemVídeo</footer>
+    <footer>Site criado por <strong>Rodrigo Ramone</strong> para o <a href="https://www.cursoemvideo.com/" target="_blank"><strong>CursoemVídeo</strong></a></footer>
 </body>
 </html>
