--- a/HTML-CSS-3-5/d012/index.html
+++ b/HTML-CSS-3-5/d012/index.html
@@ -88,7 +88,9 @@
             </p>
         </section>
     </main>
-    
-    <footer>Site criado por <strong>Rodrigo Ramone</strong> para o <a href="https://www.cursoemvideo.com/" target="_blank"><strong>CursoemVídeo</strong></a></footer>
+
+    <footer>
+        <p>Site criado por <strong>Rodrigo Ramone</strong> para o <a href="https://www.cursoemvideo.com/" target="_blank"><strong>CursoemVídeo</strong></a></p>
+    </footer>
 </body>
 </html>
