Tabelas criadas e indo para o desafio

--- a/HTML-CSS-3-5/ex023/tabela002.html
+++ b/HTML-CSS-3-5/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th{
@@ -25,6 +26,12 @@
             font-weight: bold;
             padding: 10px;
             background-color: lightgray;
+        }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
 
         thead, tfoot{
@@ -169,6 +176,12 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quam iure quis assumenda corporis, ea, facilis labore autem, vitae saepe nisi sunt laboriosam sint ullam a reprehenderit suscipit totam nostrum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit debitis odio dolor blanditiis, repellendus exercitationem enim ex illum facilis ut harum eius rerum similique distinctio, quod qui rem minus. Ipsa! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quis magni necessitatibus ab minus aliquam, reprehenderit eum accusamus cum inventore, tempora odio repellat? Quis modi repellat, alias omnis dignissimos dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore expedita quibusdam error esse ex optio reiciendis perspiciatis officiis vel at, voluptatem sit ab temporibus laudantium veritatis dolores molestiae accusamus fugiat.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quam iure quis assumenda corporis, ea, facilis labore autem, vitae saepe nisi sunt laboriosam sint ullam a reprehenderit suscipit totam nostrum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit debitis odio dolor blanditiis, repellendus exercitationem enim ex illum facilis ut harum eius rerum similique distinctio, quod qui rem minus. Ipsa! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quis magni necessitatibus ab minus aliquam, reprehenderit eum accusamus cum inventore, tempora odio repellat? Quis modi repellat, alias omnis dignissimos dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore expedita quibusdam error esse ex optio reiciendis perspiciatis officiis vel at, voluptatem sit ab temporibus laudantium veritatis dolores molestiae accusamus fugiat.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quam iure quis assumenda corporis, ea, facilis labore autem, vitae saepe nisi sunt laboriosam sint ullam a reprehenderit suscipit totam nostrum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit debitis odio dolor blanditiis, repellendus exercitationem enim ex illum facilis ut harum eius rerum similique distinctio, quod qui rem minus. Ipsa! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quis magni necessitatibus ab minus aliquam, reprehenderit eum accusamus cum inventore, tempora odio repellat? Quis modi repellat, alias omnis dignissimos dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore expedita quibusdam error esse ex optio reiciendis perspiciatis officiis vel at, voluptatem sit ab temporibus laudantium veritatis dolores molestiae accusamus fugiat.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quam iure quis assumenda corporis, ea, facilis labore autem, vitae saepe nisi sunt laboriosam sint ullam a reprehenderit suscipit totam nostrum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit debitis odio dolor blanditiis, repellendus exercitationem enim ex illum facilis ut harum eius rerum similique distinctio, quod qui rem minus. Ipsa! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quis magni necessitatibus ab minus aliquam, reprehenderit eum accusamus cum inventore, tempora odio repellat? Quis modi repellat, alias omnis dignissimos dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore expedita quibusdam error esse ex optio reiciendis perspiciatis officiis vel at, voluptatem sit ab temporibus laudantium veritatis dolores molestiae accusamus fugiat.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quam iure quis assumenda corporis, ea, facilis labore autem, vitae saepe nisi sunt laboriosam sint ullam a reprehenderit suscipit totam nostrum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit debitis odio dolor blanditiis, repellendus exercitationem enim ex illum facilis ut harum eius rerum similique distinctio, quod qui rem minus. Ipsa! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quis magni necessitatibus ab minus aliquam, reprehenderit eum accusamus cum inventore, tempora odio repellat? Quis modi repellat, alias omnis dignissimos dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore expedita quibusdam error esse ex optio reiciendis perspiciatis officiis vel at, voluptatem sit ab temporibus laudantium veritatis dolores molestiae accusamus fugiat.</p>
+    
     
 </body>
 </html>
