--- a/HTML-CSS-4-5/ex024/iframe002.html
+++ b/HTML-CSS-4-5/ex024/iframe002.html
@@ -20,7 +20,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque iusto nam aspernatur maiores eaque quidem temporibus sapiente veniam sit. Modi optio minima amet repudiandae doloremque placeat molestias dolor sequi consequuntur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod magni distinctio aliquid ducimus, quo blanditiis unde sequi veritatis. Labore, quam maiores quia ab odio voluptatibus. Illo architecto rerum repudiandae nisi.</p>
 
-    <iframe src="pagina002.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras\pagina002.html" frameborder="0" height="500" width="500"></iframe>
     
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente totam doloremque cupiditate in quisquam consectetur laborum a necessitatibus, laudantium repudiandae numquam quaerat nisi nostrum commodi, asperiores quam! Magnam, rem quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus exercitationem dignissimos, at suscipit voluptatem, sit ipsa temporibus accusamus, aliquam id quam mollitia praesentium facilis quo dolor voluptas possimus. Recusandae, accusamus!</p>
 </body>
