exercicio de iframe

--- a/HTML-CSS-4-5/ex024/iframe003.html
+++ b/HTML-CSS-4-5/ex024/iframe003.html
@@ -30,7 +30,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, ipsa, doloremque, error voluptatem nulla eius repudiandae doloribus vero esse provident expedita eos maiores voluptate illo nihil suscipit dignissimos exercitationem porro! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, quibusdam. Repellendus sequi veniam voluptas fugit unde labore, ratione explicabo quia ut at ab tempore aut velit excepturi debitis atque eos.</p>
 
-    <iframe src="" frameborder="1" id="tela" name="frame">
+    <iframe srcdoc="<h1>Escolha um link acima</h1>" frameborder="1" id="tela" name="frame">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
