--- a/HTML-CSS-4-5/ex025/form003.html
+++ b/HTML-CSS-4-5/ex025/form003.html
@@ -27,7 +27,7 @@
         </p>
         <p>
             <label for="ihora">Horário da prova</label>
-            <input type="time" name="hora" id="ihora">
+            <input type="time" name="hora" id="ihora" value="13:00">
         </p>
         <p>
             <input type="submit" value="Enviar">
