--- a/HTML-CSS-4-5/ex026/mq005/index.html
+++ b/HTML-CSS-4-5/ex026/mq005/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
     <title>Media Query</title>
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burg" class="material-icons" onclick="clickmenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -28,5 +30,15 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos accusamus sed id dolores ipsam at enim quibusdam vitae est, sunt quis commodi cupiditate, culpa error, maxime delectus! Voluptatum, saepe voluptatem. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, hic incidunt maxime odio laboriosam ratione autem perferendis modi officia error aspernatur quae vel pariatur ad omnis obcaecati porro dignissimos praesentium?</p>
         </article>
     </main>
+    <script>
+        function clickmenu(){
+            if (itens.style.display == 'block'){
+                itens.style.display = 'none'
+            }
+            else{
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
