--- a/HTML-CSS-4-5/ex026/mq005/index.html
+++ b/HTML-CSS-4-5/ex026/mq005/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
     <title>Media Query</title>
 </head>
-<body>
+<body onresize="changesize()">
     <header>
         <h1>Meu Site</h1>
         <span id="burg" class="material-icons" onclick="clickmenu()">menu</span>
@@ -31,6 +32,16 @@
         </article>
     </main>
     <script>
+        function changesize(){
+            if (window.innerWidth >= 768){
+                itens.style.display = 'block'
+            }
+            else{
+                itens.style.display = 'none'
+            }
+        }
+
+
         function clickmenu(){
             if (itens.style.display == 'block'){
                 itens.style.display = 'none'
